tests/NormalTests/paczka1/fuzzy1/51615527.err
Error in line 1: kDnuVXkOgdA A663 4,2
Error in line 6: kDnuVXkOgdA A256 93,22
Error in line 3: kDnuVXkOgdA A815 84,1
Error in line 7: kDnuVXkOgdA A256 292,6
Error in line 2: A663 A663 63,5
Error in line 12: kDnuVXkOgdA A815 71,3
Error in line 19: kDnuVXkOgdA A256 19,2
Error in line 24: kDnuVXkOgdA A663 79,3
Error in line 27: IIu4qtKOA A663 2,7
Error in line 34: LZBFcYbsK17 A256 70,4
Error in line 37: LZBFcYbsK17 A815 25,6
